--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,122 @@
     transform: rotate(360deg);
   }
 }
+
+/* .GameContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 30px;
+} */
+.GameContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: 20px;
+  padding: 10px;
+}
+
+.GameCard {
+  border: 2px black solid;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: 500px;
+  padding: 10px 10px 20px;
+  margin: 0 0 50px;
+}
+
+/* .GameCard {
+  padding: 20px 10px;
+  margin: 10px;
+  display: flex;
+  width: 30%;
+  flex-wrap: wrap;
+  border: 2px solid black;
+} */
+
+.GameCard p {
+  width: 100%;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.GameInfo {
+  display: grid;
+  width: 200%;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.TeamCard {
+  width: 100%;
+  background-color: grey;
+  /* padding: 10px 10px 0 10px; */
+  height: 300px;
+}
+
+.TeamCard img {
+  height: 20vh;
+  width: 100%;
+}
+
+.TeamCard .NameDiv {
+  height: 50px;
+}
+
+.TeamCard p {
+
+}
+
+.VoteButton {
+padding: 0 20%;
+}
+
+.btn-container {
+  /* display: flex; */
+  /* display: inline; */
+  display: grid;
+  width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  height: 20px;
+  /* justify-item: centers; */
+  /* justify-content: center; */
+}
+
+.btn-left {
+  width: 50%;
+  display: grid;
+  justify-self: center;
+  /* justify-content: flex-start; */
+  /* float: left; */
+  /* padding-left: 20px; */
+  color: red;
+  grid-column-start: 1;
+}
+
+.btn-right {
+  width: 50%;
+  justify-self: center;
+  /* display: flex; */
+  /* justify-content: center; */
+
+  display: grid;
+  /* align-items: center; */
+  /* align-content: center; */
+  /* padding-right: 20px; */
+  /* float: right; */
+  grid-column-start: 2;
+
+}
+
+
+/* @media only screen and (max-width: 750px) {
+  .GameCard {
+    padding: 20px 10px;
+    margin: 10px;
+    display: flex;
+    width: 80%;
+    flex-wrap: wrap;
+    border: 2px solid black;
+  }
+} */
