refactoring redux for user, team, game, and vote fetches

--- a/src/components/Vote/VoteButton.module.css
+++ b/src/components/Vote/VoteButton.module.css
@@ -2,6 +2,12 @@
     pointer-events: none
 }
 
-.ButtonEnabled {
-    pointer-events: all
+.ButtonEnabledNo {
+    pointer-events: all;
+    background-color: red;
+}
+
+.ButtonEnabledYes {
+    pointer-events: all;
+    background-color: green;
 }
