Register form looking like a real form

--- a/src/components/Vote/VoteButton.module.css
+++ b/src/components/Vote/VoteButton.module.css
@@ -11,3 +11,8 @@
     pointer-events: none;
     background-color: green;
 }
+
+.ButtonEnabledUndecided {
+    pointer-events: all;
+    background-color: white;
+}
