--- a/src/containers/TeamContainer.module.css
+++ b/src/containers/TeamContainer.module.css
@@ -1,7 +1,7 @@
 .TeamContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
     grid-gap: 5px;
     padding: 5px;
     box-sizing: border-box;
